force-app/main/default/objects/Opportunity/fields/Days_To_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Close__c</fullName>
    <formula>CloseDate - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days To Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>