force-app/main/default/objects/Opportunity/listViews/Main_Opp_View.listView-meta.xml
<ListView>
    <fullName>Main_Opp_View</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>Days_To_Close__c</columns>
    <columns>Sector__c</columns>
    <columns>Einstein_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>Main Opp View</label>
</ListView>